--- a/FrontEnd/src/components/SearchPage/search_page.css
+++ b/FrontEnd/src/components/SearchPage/search_page.css
@@ -89,3 +89,34 @@
   right: 0;
   transform: translateY(-50%);
 }
+
+.new-companies-result_pages {
+  padding: 40px;
+}
+
+.pagination {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination button {
+  all: unset;
+  border: none;
+  /* color: black; */
+  font-size: 16px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin: 0 4px;
+  cursor: pointer;
+}
+
+.pagination button.active {
+  background-color: none;
+  color: #1F9A7C;
+  border: 1px solid #1F9A7C;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+}
