--- a/FrontEnd/src/pages/AdminPage/DetailView/Contacts.module.css
+++ b/FrontEnd/src/pages/AdminPage/DetailView/Contacts.module.css
@@ -1,7 +1,6 @@
 .contacts-container {
     max-width: 400px;
     margin: 0 auto;
-    padding: 24px;
     background-color: var(--background__admin-panel);
     font-family: var(--font__admin-panel);
 }
@@ -16,14 +15,19 @@
 .contacts-form {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 24px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .form-label {
     font-size: 14px;
     font-weight: 400;
-    color: var(--main-black-90, #292E32);
-    margin-bottom: 4px;
+    color: var(--main-text-color);
     font-family: var(--font-main);
 }
 
@@ -31,42 +35,41 @@
     width: 100%;
     height: 40px;
     padding: 8px 12px;
-    font-size: 16px;
+    font-size: 14px;
+    letter-spacing: -0.14px;
+    font-family: var(--font-main);
+    color: var(--main-text-color);
     border: 1px solid var(--border-input__admin-panel);
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: var(--background-input__admin-panel);
     box-sizing: border-box;
+    margin-top: 4px;
 }
 
 .form-input:focus {
-    border-color: var(--main-button-color);
+    border: 1px solid var(--main-header-color);
     outline: none;
-    box-shadow: 0 0 3px var(--main-button-hover-color);
 }
 
 .form-buttons {
     display: flex;
     justify-content: flex-start;
-    margin-top: 16px;
-    gap: 12px;
 }
 
 .save-button {
-    display: flex;
-    padding: 7px 15px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
     border-radius: 4px;
     background: var(--main-button-color);
     color: var(--main-button-text-color);
-    text-align: center;
-    font-family: var(--font__admin-panel);
-    font-size: 14px;
-    font-weight: 600;
-    cursor: pointer;
-    text-decoration: none;
     font-feature-settings: 'calt' off;
+    font-style: normal;
+    padding: 8px 15px;
+    font-family: var(--font-main);
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: -0.01em;
+    text-align: center;
+    cursor: pointer;
 }
 
 .save-button:hover {
