--- a/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
+++ b/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
@@ -1,9 +1,10 @@
 .TermsAndConditions {
     display: flex;
-    padding: 40px 16px;
-    background-color: var(--light-text-color);
+    justify-content: center;
+    background-color: var(--about-us-main-background);
     color: var(--main-text-color);
     scroll-behavior: smooth;
+    width: 100vw;
 
 }
   
@@ -12,46 +13,33 @@
     font-size: 18px;
     font-weight: 700;
     text-align: left;
-    margin-bottom: 24px;
+    max-width: 344px;
+    padding-bottom: 24px;
 }
 
 .TermsAndConditions__text_container {
     display: flex;
     flex-direction: column;
-    max-width: 971px;
-}
-
-.text_content {
-    font-family: var(--font-main);
     font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-}
-
-.text_content__margin_bottom{
-    margin-bottom: 24px;
-    font-family: var(--font-main);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 22px;
-}
-
-.text_content__heading{
-    margin-top: 24px;
+    letter-spacing: -1%;
+    padding: 40px 16px;
 }
 
 @media only screen and (min-width: 768px) {
-    .TermsAndConditions {
+    .TermsAndConditions__text_container {
         padding: 48px 24px;
+        max-width: 720px;
     }
 
     .TermsAndConditions__title {
         font-size: 34px;
+        max-width: 720px;
+
     }
 }
 
 @media only screen and (min-width: 1200px) {
     .TermsAndConditions {
-        padding: 80px 214px;
+
     }
 }
