--- a/FrontEnd/src/components/Footer/FooterComponents/FooterPolicy.module.css
+++ b/FrontEnd/src/components/Footer/FooterComponents/FooterPolicy.module.css
@@ -42,6 +42,10 @@
     white-space: nowrap;
 }
 
+.policy-content-links__text {
+    color: var(--footer-policy-links-font-color);
+}
+
 @media only screen and (min-width: 768px) {
     .policy-content__main {
         flex-direction: row;
@@ -74,7 +78,6 @@
     }
 
     .policy-content-links__text {
-        color: var(--footer-policy-links-font-color);
         font-weight: 400;
         line-height: 20px;
     }
