--- a/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
+++ b/FrontEnd/src/components/TermsAndConditionsApp/terms_conditions/TermsAndConditionsComponent.module.css
@@ -21,7 +21,8 @@
     display: flex;
     flex-direction: column;
     font-size: 14px;
-    letter-spacing: -1%;
+    line-height: 28px;
+    letter-spacing: -0,14px;
     padding: 40px 16px;
 }
 
