--- a/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
+++ b/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
@@ -5,7 +5,6 @@
     color: var(--main-text-color);
     scroll-behavior: smooth;
     width: 100vw;
-
 }
   
 .privacy_policy__title {
@@ -14,14 +13,14 @@
     font-weight: 700;
     text-align: left;
     max-width: 343px;
-    padding-bottom: 24px;
 }
 
 .privacy_policy__text_container {
     display: flex;
     flex-direction: column;
     font-size: 14px;
-    letter-spacing: -1%;
+    line-height: 28px;
+    letter-spacing: -0,14px;
     padding: 40px 16px;
 }
 
