--- a/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
+++ b/FrontEnd/src/pages/PrivacyPolicyPage/PrivacyPolicy.module.css
@@ -52,6 +52,7 @@
 @media only screen and (min-width: 1512px) {
     .privacy_policy__text_container {
         padding: 80px 214px;
+        min-width: 1100px;
 
     }
 
